Optimized the tokenizer